# rag

./: .gitignore  RAG_CHATBOT_SPECIFICATION.md  README.md  app.py  docker-compose.yml  index.html  pyproject.toml  rag_chatbot.py  sample.txt  test_rag_chatbot.py
.github/workflows/: deploy.yml
backend/: index.js  package-lock.json  package.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
